--- a/src/header/dropdown/dropdown.css
+++ b/src/header/dropdown/dropdown.css
@@ -2,16 +2,29 @@
 /*************** primary colors End **************/
 .intern .dropdown {
   background-color: #009688; }
-  .intern .dropdown hr {
-    border-top: 1px solid #00796b; }
-  .intern .dropdown li:hover {
-    background-color: #00897b; }
-  .intern .dropdown li:active {
-    background-color: #00897b; }
-  .intern .dropdown li:visited {
-    background-color: #00897b; }
-  .intern .dropdown li a {
-    color: white; }
+
+.intern .dropdown hr {
+  border-top: 1px solid #00796b; }
+
+.intern .dropdown li:hover {
+  background-color: #00897b; }
+
+.intern .dropdown li:active {
+  background-color: #00897b; }
+
+.intern .dropdown li:visited {
+  background-color: #00897b; }
+
+.intern .dropdown li a {
+  color: white; }
+
+@keyframes animate {
+  from {
+    height: 0px;
+    opacity: 0; }
+  to {
+    height: 90px;
+    opacity: 1; } }
 
 .dropdown {
   position: fixed;
@@ -21,17 +34,22 @@
   min-width: 175px !important;
   max-width: 175px !important;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1; }
-  .dropdown hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    margin: 0;
-    padding: 0; }
-  .dropdown li {
-    cursor: pointer;
-    padding: 12px 16px;
-    list-style: none; }
-    .dropdown li a {
-      text-decoration: none;
-      display: block; }
+  z-index: 1;
+  animation-name: animate;
+  animation-duration: 0.5s; }
+
+.dropdown hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  margin: 0;
+  padding: 0; }
+
+.dropdown li {
+  cursor: pointer;
+  padding: 12px 16px;
+  list-style: none; }
+
+.dropdown li a {
+  text-decoration: none;
+  display: block; }
