--- a/src/header/dropdown/dropdown.intern.scss
+++ b/src/header/dropdown/dropdown.intern.scss
@@ -2,21 +2,30 @@
 .intern {
     .dropdown {
         background-color: $teal5;
-        hr {
-            border-top: 1px solid $teal7;
-        }
-        li {
+        .user-profile {
             &:hover {
                 background-color: $teal6;
             }
-            &:active {
-                background-color: $teal6;
-            }
-            &:visited {
-                background-color: $teal6;
-            }
-            a {
-                color: white;
+        }
+        .user-profile-active {
+            background-color: $teal6;
+        }
+        .dropdown-container {
+            background-color: $teal5;
+            border-top: 1px solid $teal8;
+            li {
+                &:hover {
+                    background-color: $teal6;
+                }
+                &:active {
+                    background-color: $teal6;
+                }
+                &:visited {
+                    background-color: $teal6;
+                }
+                a {
+                    color: white;
+                }
             }
         }
     }
