--- a/src/header/header.css
+++ b/src/header/header.css
@@ -1,14 +1,14 @@
 @import url(./header.intern.css);
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 .navbar {
-  position: absolute;
+  position: fixed;
   height: 60px;
   width: 100%;
   top: 0;
-  overflow-x: hidden;
-  left: 0;
-  z-index: 999; }
+  left: 0; }
   .navbar .navbar-brand {
-    height: inherit; }
+    height: inherit;
+    float: left; }
     .navbar .navbar-brand .material-icons {
       cursor: pointer;
       margin-left: 20px;
@@ -16,29 +16,8 @@
     .navbar .navbar-brand .logo {
       text-transform: uppercase; }
   .navbar .navbar-right {
-    display: block;
     float: right;
-    height: 60px;
     margin-right: 50px;
-    margin-top: -60px; }
-    .navbar .navbar-right .userProfile, .navbar .navbar-right .userProfileActive {
-      height: inherit;
-      min-width: 175px !important;
-      max-width: 175px !important;
-      padding-left: 15px;
-      outline: none;
-      border: none;
-      display: inline-block;
-      cursor: pointer;
-      text-decoration: none;
-      font-size: 12px; }
-      .navbar .navbar-right .userProfile .userImage, .navbar .navbar-right .userProfileActive .userImage {
-        height: 30px;
-        width: 30px;
-        padding-right: 5px;
-        border-radius: 15px;
-        top: 40px; }
-        .navbar .navbar-right .userProfile .userImage .material-icons, .navbar .navbar-right .userProfileActive .userImage .material-icons {
-          transition: 1s; }
+    height: inherit; }
 
 /*  for small devices */
