--- a/src/header/dropdown/dropdown.scss
+++ b/src/header/dropdown/dropdown.scss
@@ -1,36 +1,59 @@
 @import './dropdown.intern.scss';
 @keyframes animate {
-    from { height: 0px; opacity :0; }
-    to { height: 90px; opacity: 1;}
-
-}
-.dropdown {
-    position: fixed;
-    top: 60px;
-    right: 50px;
-    display: none;
-    min-width: 175px !important;
-    max-width: 175px !important;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    animation-name: animate;
-    animation-duration: 0.5s;
-    hr {
-        display: block;
-        height: 1px;
-        border: 0;
-        margin: 0;
-        padding: 0;
+    from {
+        height: 0px;
+        opacity: 0;
     }
-    li {
-        cursor: pointer;
-        padding: 12px 16px;
-        list-style: none;
-        a {
-            //padding: 8px;
-            text-decoration: none;
-            display:block;
+    to {
+        height: 90px;
+        opacity: 1;
+    }
+}
 
+.dropdown {
+    width: 175px;
+    height: auto;
+    .user-profile {
+        height: 60px;
+        width: 100%;
+        display: table;
+        cursor: pointer;
+        font-size: 14px;
+        outline: none;
+        .userImage {
+            height: 30px;
+            width: 30px;
+            padding-right: 10px;
+            border-radius: 15px;
+        }
+        .material-icons {
+            transition: 1s;
+            padding: 0;
+        }
+        span {
+            vertical-align: middle;
+            display: table-cell;
+            padding-left: 15px;
+        }
+    }
+    .user-profile-active {
+        @extend .user-profile;
+    }
+    .dropdown-container {
+        width: 100%;
+        display: none;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        animation-name: animate;
+        animation-duration: 0.5s;
+        li {
+            cursor: pointer;
+            padding: 12px 16px;
+            list-style: none;
+            a {
+                //padding: 8px;
+                text-decoration: none;
+                display: block;
+            }
         }
     }
 }
